--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta property="og:type" content="website">
 	<meta property="og:title" content="코로나 바이러스 현황판">
-	<meta name="description" content="질병관리본부의 DATA 근거하여, 신종 코로나 바이러스 감염증에 대한 정보를 신속하게 전달하기 위한 사이트입니다.">
+	<meta name="description" content="코로나 바이러스 현황판">
 	<meta property="og:description" content="코로나 바이러스 현황판">
 	<meta property="og:image" content="https://livecorona.co.kr/livecorona.jpg">
 	<meta property="og:url" content="https://livecorona.co.kr">
@@ -12,9 +12,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="LIVECoD">
-  <link rel="shortcut icon" href="#">
+
   <title>코로나 맵</title>
+  <link rel='icon' href='img/favicon.png' type='image/x-icon'/ >
   <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=26ba2oaskk"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157131634-1"></script>
   <script>
@@ -88,8 +88,6 @@
     #myAreaChart_three{
       padding-bottom: 1.5rem;
     }
-    /* 텍스트 숨기기 */
-    .ir-txt{display:block;overflow:hidden;text-indent:-9999px;font-size:1px}
   </style>
 
 </head>
@@ -109,20 +107,21 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 style="margin-top:1em;"class="h2 mb-0 text-gray-800 mb-4">신종 코로나 바이러스 맵</h1>
-          <header class="d-sm-flex align-items-center mb-4">
-              <h2 class="ir-txt">알림</h2>
-              <ul class="list-group">
-                <li class="list-group-item">* <a href="http://www.cdc.go.kr/linkCheck.es?mid=a21111050500" target="_blank">질병관리본부</a>,
-                  <a href="http://news.kbs.co.kr/common/main.html" target="_blank">KBS</a>, 제주도청의 DATA 근거, 일일업데이트, <span class="text-update"></span> 최종 업데이트
-                </li>
-                <li class="list-group-item">* GDG(google developers group) 등 자발적으로 참여해주신 분들께서 팀을 꾸려 비용을 받지 않고 업데이트 중에 있습니다. <a
-                  target="_blank" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">링크&#8690;</a></li>
-                <li class="list-group-item">* <a href="https://www.ncloud.com" target="_blank">네이버 클라우드 플랫폼</a>에서 서버 및 지도 API 를 무상
-                  지원합니다.</li>
-              </ul>
-            <a href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do" target="_blank" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm ml-4"><i class="fas fa-download fa-sm text-white-50"></i> 리포트 바로가기</a>
-          </header>
+          <div class="d-sm-flex align-items-center justify-content-between mb-4">
+            <h1 style="margin-top:1em;" class="h2 mb-0 text-gray-800">신종 코로나 바이러스 맵<br>
+              <span class="h5">*
+                <a href="http://www.cdc.go.kr/linkCheck.es?mid=a21111050500" target="_blank">질병관리본부</a>,
+                <a href="http://news.kbs.co.kr/common/main.html" target="_blank">KBS</a>, 제주도청의 DATA 근거, 일일업데이트, <span
+                  class="text-update"></span> 최종 업데이트</span><br>
+              <span class="h5">* GDG(google developers group) 등 자발적으로 참여해주신 분들께서 팀을 꾸려 비용을 받지 않고 업데이트 중에 있습니다. <a
+                  target="_blank" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">&#8690;</a></span><br>
+              <span class="h5">* <a href="https://www.ncloud.com" target="_blank">네이버 클라우드 플랫폼</a>에서 서버 및 지도 API 를 무상
+                지원합니다.</span>
+            </h1>
+            <a href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do" target="_blank"
+              class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                class="fas fa-download fa-sm text-white-50"></i> 리포트 바로가기</a>
+          </div>
 
           <!-- Content Row -->
           <div class="row">
@@ -190,7 +189,7 @@
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">완치자 현황</div>
+                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">한국 완치자</div>
                       <!-- 완치자(세계 완치자도 포함) -->
                       <h4 class="small font-weight-bold">한국(완치자 <span id="한국완치자_인원"></span>명/확진자 <span
                           id="한국확진자_완치자카드"></span>명)<span class="float-right"><span id="한국완치자_확률"></span>%</span></h4>
@@ -198,12 +197,9 @@
                         <div class="progress-bar bg-success" id="완치자확률바" role="progressbar" style="width: 0%"
                           aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
-                      <h4 class="small font-weight-bold">전세계(완치자 <span id="세계완치자_인원"></span>명/확진자 <span
-                        id="세계확진자_인원"></span>명)<span class="float-right"><span id="세계완치자_확률"></span>%</span></h4>
-                      <div class="progress mb-4">
-                        <div class="progress-bar bg-success" id="세계완치자확률바" role="progressbar" style="width: 0%"
-                          aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                      </div>
+                    </div>
+                    <div class="col-auto">
+                      <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
                     </div>
                   </div>
                 </div>
@@ -248,7 +244,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">Top5 발생국가</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">Top3 발생국가</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">
@@ -263,26 +259,14 @@
                   </div>
                 </div>
                 <!-- Card Body -->
-                <div class="card-body" id="Top5">
-                  <h4 class="small font-weight-bold"><span class="float-right"></span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="card-body">
+                  <div class="chart-pie pt-4 pb-2">
+                    <canvas id="myPieChart"></canvas>
                   </div>
-                  <h4 class="small font-weight-bold"><span class="float-right"></span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold"><span class="float-right"></span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold"><span class="float-right"></span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold"><span class="float-right"></span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div id="chartText" class="mt-4 text-center small">
+                    <span class="mr-2"></span>
+                    <span class="mr-2"></span>
+                    <span class="mr-2"></span>
                   </div>
                 </div>
               </div>
@@ -744,35 +728,21 @@
   <script>
     var data = marker
 
-    var 확진자수 = 0;
-    var 사망자수 = 0;
-    var 완치자수 = 0;
+    let 확진자수 = 0;
+    let 사망자수 = 0;
     for (var variable in data) {
 
       if (data[variable]["Name"] == "한국") {
         document.getElementById("한국확진자").innerHTML = data[variable]["확진자수"];
         document.getElementById("한국확진자_완치자카드").innerHTML = data[variable]["확진자수"];
         document.getElementById("한국완치자_인원").innerHTML = data[variable]["완치자수"];
-        var 완치자확율값 = ((data[variable]["완치자수"] / data[variable]["확진자수"]) * 100).toFixed(3)
+        let 완치자확율값 = ((data[variable]["완치자수"] / data[variable]["확진자수"]) * 100).toFixed(3)
         document.getElementById("한국완치자_확률").innerHTML = 완치자확율값;
         document.getElementById("완치자확률바").style.width = 완치자확율값 + "%";
       }
-
       확진자수 += data[variable]["확진자수"];
       사망자수 += data[variable]["사망자수"];
-      // 전세계 완치자수 합산
-      if(data[variable]["완치자수"]){
-        완치자수 += data[variable]["완치자수"];
-      }
-
     }
-    // 전 세계 완치자 ui 반영
-    document.getElementById("세계완치자_인원").innerHTML = Number(완치자수).toLocaleString();
-    document.getElementById("세계확진자_인원").innerHTML = Number(확진자수).toLocaleString();
-    var 세계완치자확율값 = ((Number(완치자수) / Number(확진자수)) * 100).toFixed(3);
-    document.getElementById("세계완치자_확률").innerHTML = 세계완치자확율값;
-    document.getElementById("세계완치자확률바").style.width = 세계완치자확율값 + "%";
-
     document.getElementById("발생국가수").innerHTML = data.length;
     document.getElementById("확진자수").innerHTML = Number(확진자수).toLocaleString();
     document.getElementById("사망자수").innerHTML = Number(사망자수).toLocaleString();
