제주보건지소현황 업데이트

--- a/index.html
+++ b/index.html
@@ -586,10 +586,444 @@
                   </div>
                 </div>
                 <!-- Card Body -->
+                <!-- Card Body -->
                 <div class="card-body">
                   마커를 클릭하면 자세한 진료소의 정보를 확인할 수 있습니다. 타 지역은 업데이트 중에 있습니다.
                   <div id="map" style="width:100%;height:400px;"></div>
+
+                  <p style="margin-top:1rem">
+                    <a class="btn btn-primary" data-toggle="collapse" href="#제주보건지소" role="button" aria-expanded="true" aria-controls="진료소1">제주 보건지소현황</a>
+                  </p>
+                  <div class="card card-body collapse multi-collapse" id="제주보건지소">
+                    <table class="table table-bordered" width="200%">
+                        <b>
+                          <u>제주시</u>
+                        </b>
+                        <hr>
+                        <table cellspacing=0 border=1>
+                          <tr>
+                            <th>번호</th>
+                            <th>보건지소명</th>
+                            <th>소재지</th>
+                            <th>연락처</th>
+                          </tr>
+                          <tr>
+                            <td>1</td>
+                            <td>애월보건지소</td>
+                            <td> 제주시 애월읍 애월로 167</td>
+                            <td>064-728-8923</td>
+                          </tr>
+                          <tr>
+                            <td>2</td>
+                            <td>한경보건지소</td>
+                            <td> 제주시 한경면 두신로 118-2</td>
+                            <td>064-728-8935 </td>
+                          </tr>
+                          <tr>
+                            <td>3</td>
+                            <td>금악보건진료소</td>
+                            <td> 제주시 한림읍 금악로1길 1</td>
+                            <td>064-728-7311</td>
+                          </tr>
+                          <tr>
+                            <td>4</td>
+                            <td>상명보건진료소</td>
+                            <td> 제주시 한림읍 상명1길 22</td>
+                            <td>064-728-7312 </td>
+                          </tr>
+                          <tr>
+                            <td>5</td>
+                            <td>비양보건진료소</td>
+                            <td> 제주시 한림읍 비양도길 4 </td>
+                            <td>064-728-7313</td>
+                          </tr>
+                          <tr>
+                            <td>6</td>
+                            <td>봉성보건진료소</td>
+                            <td> 제주시 애월읍 녹근로 6</td>
+                            <td>064-728-7314</td>
+                          </tr>
+                          <tr>
+                            <td>7</td>
+                            <td>납읍보건진료소</td>
+                            <td> 제주시 애월읍 중산간서로 5519</td>
+                            <td>064-728-7315 </td>
+                          </tr>
+                          <tr>
+                            <td>8</td>
+                            <td>상가보건진료소</td>
+                            <td> 제주시 애월읍 애상로 226</td>
+                            <td>064-728-7316 </td>
+                          </tr>
+                          <tr>
+                            <td>9</td>
+                            <td>장전보건진료소</td>
+                            <td> 제주시 애월읍 하소로 353</td>
+                            <td>064-728-7317</td>
+                          </tr>
+                          <tr>
+                            <td>10</td>
+                            <td>고성보건진료소</td>
+                            <td> 제주시 애월읍 광성로 61-2</td>
+                            <td>064-728-7319 </td>
+                          </tr>
+                          <tr>
+                            <td>11</td>
+                            <td>유수암진료소</td>
+                            <td> 제주시 애월읍유수암평화길14-2</td>
+                            <td>064-728-7318 </td>
+                          </tr>
+                          <tr>
+                            <td>12</td>
+                            <td>광령보건진료소</td>
+                            <td> 제주시 애월읍 광성로 304</td>
+                            <td>064-728-7320 </td>
+                          </tr>
+                          <tr>
+                            <td>13</td>
+                            <td>조수보건진료소</td>
+                            <td> 제주시 한경면 용금로468</td>
+                            <td>064-728-7321</td>
+                          </tr>
+                          <tr>
+                            <td>14</td>
+                            <td>저지보건진료소</td>
+                            <td> 제주시 한경면 중산간서로 3699</td>
+                            <td>064-728-7322</td>
+                          </tr>
+                          <tr>
+                            <td>15</td>
+                            <td>청수보건진료소</td>
+                            <td> 제주시 한경면 중산간서로 3483</td>
+                            <td>064-728-7323</td>
+                          </tr>
+                          <tr>
+                            <td>16</td>
+                            <td>용수보건진료소</td>
+                            <td> 제주시 한경면 용수길 73</td>
+                            <td>064-728-7324</td>
+                          </tr>
+                          <tr>
+                            <td>17</td>
+                            <td>산양보건진료소</td>
+                            <td> 제주시 한경면 연명로 12</td>
+                            <td>064-728-7325</td>
+                          </tr>
+                          <tr>
+                            <td>18</td>
+                            <td>제주보건소</td>
+                            <td> 제주시 연삼로 264</td>
+                            <td>064-728-4010</td>
+                          </tr>
+                          <tr>
+                            <td>19</td>
+                            <td>노형건강생활지원센터</td>
+                            <td> 제주시 노형9길 9-4</td>
+                            <td>064-728-8723</td>
+                          </tr>
+                          <tr>
+                            <td>20</td>
+                            <td>추자보건지소</td>
+                            <td> 제주시 추자면 추자로 86</td>
+                            <td>064-728-1519</td>
+                          </tr>
+                          <tr>
+                            <td>21</td>
+                            <td>하추자보건진료소</td>
+                            <td> 제주시 추자면 추자로 587</td>
+                            <td>064-728-7301</td>
+                          </tr>
+                          <tr>
+                            <td>22</td>
+                            <td>동부보건소</td>
+                            <td> 제주시 구좌읍 김녕로 14길 6</td>
+                            <td>064-728-1515</td>
+                          </tr>
+                          <tr>
+                            <td>23</td>
+                            <td>구좌 보건지소</td>
+                            <td> 제주시 구좌읍 세화12길 9</td>
+                            <td>064-728-1517</td>
+                          </tr>
+                          <tr>
+                            <td>24</td>
+                            <td>조천 보건지소</td>
+                            <td> 제주시 조천읍 신북로 264</td>
+                            <td>064-728-1516</td>
+                          </tr>
+                          <tr>
+                            <td>25</td>
+                            <td>우도 보건지소</td>
+                            <td> 제주시 우도면 우도로 153</td>
+                            <td>064-728-1518</td>
+                          </tr>
+                          <tr>
+                            <td>26</td>
+                            <td>하도 보건진료소</td>
+                            <td> 제주시 구좌읍 일주동로 3413</td>
+                            <td>064-728-7304</td>
+                          </tr>
+                          <tr>
+                            <td>27</td>
+                            <td>송당 보건진료소</td>
+                            <td> 제주시 구좌읍 송당서1길 4</td>
+                            <td>064-728-7303</td>
+                          </tr>
+                          <tr>
+                            <td>28</td>
+                            <td>덕천 보건진료소</td>
+                            <td> 제주시 구좌읍 덕평로 325-3</td>
+                            <td>064-728-7302</td>
+                          </tr>
+                          <tr>
+                            <td>29</td>
+                            <td>대흘 보건진료소</td>
+                            <td> 제주시 조천읍 중산간동로 645</td>
+                            <td>064-728-7306</td>
+                          </tr>
+                          <tr>
+                            <td>30</td>
+                            <td>선흘1리 보건진료소</td>
+                            <td> 제주시 조천읍 선흘동1길 10</td>
+                            <td>064-728-7307</td>
+                          </tr>
+                          <tr>
+                            <td>31</td>
+                            <td>선흘2리 보건진료소</td>
+                            <td> 제주시 조천읍 선교로 533</td>
+                            <td>064-728-7308</td>
+                          </tr>
+                          <tr>
+                            <td>32</td>
+                            <td>교래 보건진료소</td>
+                            <td> 제주시 조천읍 비자림로 652</td>
+                            <td>064-728-7305</td>
+                          </tr>
+                          <tr>
+                            <td>33</td>
+                            <td>서부보건소</td>
+                            <td> 제주시 한림읍 강구로 5</td>
+                            <td>064-728-1513</td>
+                          </tr>
+                          <tr>
+                            <td>34</td>
+                            <td>화북건강생활지원센터팀</td>
+                            <td>제주시 동화로1길 45-22</td>
+                            <td>064-728-8511</td>
+                          </tr>
+                        </table>
+                        <hr>
+                        <b>
+                          <u>서귀포시</u>
+                        </b>
+                        <hr>
+                        <table cellspacing=0 border=1>
+                          <tr>
+                            <td>번호</td>
+                            <td>보건지소명</td>
+                            <td>소재지</td>
+                            <td>연락처</td>
+                          </tr>
+                          <tr>
+                            <td>1</td>
+                            <td>가시보건진료소</td>
+                            <td> 서귀포시 표선면 가시로 613번길 56-1</td>
+                            <td>064-760-6378</td>
+                          </tr>
+                          <tr>
+                            <td>2</td>
+                            <td>가파보건진료소</td>
+                            <td> 서귀포시 대정읍 가파로67길 30</td>
+                            <td>064-760-6384</td>
+                          </tr>
+                          <tr>
+                            <td>3</td>
+                            <td>구억보건진료소</td>
+                            <td> 서귀포시 대정읍 중산간서로2364</td>
+                            <td>064-760-6389</td>
+                          </tr>
+                          <tr>
+                            <td>4</td>
+                            <td>난산보건진료소</td>
+                            <td> 서귀포시 성산읍 난산로 28</td>
+                            <td>064-760-6382</td>
+                          </tr>
+                          <tr>
+                            <td>5</td>
+                            <td>대평보건진료소</td>
+                            <td> 서귀포시 안덕면 대평감산로19</td>
+                            <td>064-760-6394</td>
+                          </tr>
+                          <tr>
+                            <td>6</td>
+                            <td>동부보건소</td>
+                            <td> 서귀포시 남원읍 태위로527</td>
+                            <td>064-760-6100</td>
+                          </tr>
+                          <tr>
+                            <td>7</td>
+                            <td>마라보건진료소</td>
+                            <td> 서귀포시 대정읍 마라로 101번길 22</td>
+                            <td>064-760-6385</td>
+                          </tr>
+                          <tr>
+                            <td>8</td>
+                            <td>무릉보건진료소</td>
+                            <td> 서귀포시 대정읍 중산간서로2877</td>
+                            <td>064-760-6388</td>
+                          </tr>
+                          <tr>
+                            <td>9</td>
+                            <td>사계보건진료소</td>
+                            <td> 서귀포시 안덕면 산방로349</td>
+                            <td>064-760-6390</td>
+                          </tr>
+                          <tr>
+                            <td>10</td>
+                            <td>삼달보건진료소</td>
+                            <td> 서귀포시 성산읍 삼달로 215</td>
+                            <td>064-760-6381</td>
+                          </tr>
+                          <tr>
+                            <td>11</td>
+                            <td>상창보건진료소</td>
+                            <td> 서귀포시 안덕면 한창로145길11</td>
+                            <td>064-760-6393</td>
+                          </tr>
+                          <tr>
+                            <td>12</td>
+                            <td>서광동보건진료소</td>
+                            <td> 서귀포시 안덕면 중산간서로1811</td>
+                            <td>064-760-6391</td>
+                          </tr>
+                          <tr>
+                            <td>13</td>
+                            <td>서광서보건진료소</td>
+                            <td> 서귀포시 안덕면 중산간서로2118</td>
+                            <td>064-760-6392</td>
+                          </tr>
+                          <tr>
+                            <td>14</td>
+                            <td>서귀포보건소</td>
+                            <td> 서귀포시 중앙로 101번길 52(서홍동)</td>
+                            <td>064-760-6000</td>
+                          </tr>
+                          <tr>
+                            <td>15</td>
+                            <td>서부보건소</td>
+                            <td> 서귀포시 대정읍 최남단해안로 15길 12</td>
+                            <td>064-760-6200</td>
+                          </tr>
+                          <tr>
+                            <td>16</td>
+                            <td>성산보건지소</td>
+                            <td> 서귀포시 성산읍 고성오조로 42</td>
+                            <td>064-760-6151</td>
+                          </tr>
+                          <tr>
+                            <td>17</td>
+                            <td>성읍보건진료소</td>
+                            <td> 서귀포시 표선면 성읍정의현로 92</td>
+                            <td>064-760-6377</td>
+                          </tr>
+                          <tr>
+                            <td>18</td>
+                            <td>세화보건진료소</td>
+                            <td> 서귀포시 표선면 세성로 302-1</td>
+                            <td>064-760-6376</td>
+                          </tr>
+                          <tr>
+                            <td>19</td>
+                            <td>수산보건진료소</td>
+                            <td> 서귀포시 성산읍 수산서남로 17-1</td>
+                            <td>064-782-4358</td>
+                          </tr>
+                          <tr>
+                            <td>20</td>
+                            <td>신도보건진료소</td>
+                            <td> 서귀포시 대정읍 도원로37</td>
+                            <td>064-760-6386</td>
+                          </tr>
+                          <tr>
+                            <td>21</td>
+                            <td>신례보건진료소</td>
+                            <td> 서귀포시 남원읍 신례중앙로 36-1</td>
+                            <td>064-760-6371</td>
+                          </tr>
+                          <tr>
+                            <td>22</td>
+                            <td>신산보건진료소</td>
+                            <td> 서귀포시 성산읍 환해장성로 11번길 21-12</td>
+                            <td>064-760-6380</td>
+                          </tr>
+                          <tr>
+                            <td>23</td>
+                            <td>신평보건진료소</td>
+                            <td> 서귀포시 대정읍 중산간서로2600</td>
+                            <td>064-760-6387</td>
+                          </tr>
+                          <tr>
+                            <td>24</td>
+                            <td>신풍보건진료소</td>
+                            <td> 서귀포시 성산읍 풍천로 192번길 40-1</td>
+                            <td>064-760-6379</td>
+                          </tr>
+                          <tr>
+                            <td>25</td>
+                            <td>신흥보건진료소</td>
+                            <td> 서귀포시 남원읍 중산간동로 5774</td>
+                            <td>064-760-6374</td>
+                          </tr>
+                          <tr>
+                            <td>26</td>
+                            <td>안덕보건지소</td>
+                            <td> 서귀포시 안덕면 화순중앙로 12길 30-9</td>
+                            <td>064-760-6262</td>
+                          </tr>
+                          <tr>
+                            <td>27</td>
+                            <td>의귀보건진료소</td>
+                            <td> 서귀포시 남원읍 한신로 201</td>
+                            <td>064-760-6373</td>
+                          </tr>
+                          <tr>
+                            <td>28</td>
+                            <td>중문보건지소</td>
+                            <td> 서귀포시 천제연로 147</td>
+                            <td>064-760-6062</td>
+                          </tr>
+                          <tr>
+                            <td>29</td>
+                            <td>토산보건진료소</td>
+                            <td> 서귀포시 표선면 중산간동로 5561</td>
+                            <td>064-760-6375</td>
+                          </tr>
+                          <tr>
+                            <td>30</td>
+                            <td>표선보건지소</td>
+                            <td> 서귀포시 표선면 표선중앙로 17</td>
+                            <td>064-760-6161</td>
+                          </tr>
+                          <tr>
+                            <td>31</td>
+                            <td>한남보건진료소</td>
+                            <td> 서귀포시 남원읍 남한로 420번길 13</td>
+                            <td>064-760-6372</td>
+                          </tr>
+                          <tr>
+                            <td>32</td>
+                            <td>강정보건지소</td>
+                            <td> 서귀포시 강정동 4362-10</td>
+                            <td>064-760-6591</td>
+                          </tr>
+                        </table>
+
+                  </div>
+
+
                 </div>
+
+
               </div>
             </div>
           </div>
