--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
               <div class="card shadow mb-12">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">안전수칙</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">안전수칙 및 팩트체크</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">
@@ -397,9 +397,7 @@
                   </p>
                   <a href="http://www.cdc.go.kr/contents.es?mid=a21111060000">질병관리본부 안전수칙</a><br>
                   <a href="https://www.cdc.go.kr/linkCheck.es?mid=a21111050600">신종코로나바이러스 선별진료소</a><br>
-                  <a
-                    href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스
-                    제주지역 선별진료소(카카오맵 연동)</a>
+                  <a href="https://news.naver.com/main/factcheck/main.nhn">신종코로나바이러스 관련 팩트체크</a>
                 </div>
               </div>
             </div>
@@ -590,7 +588,9 @@
                 <div class="card-body">
                   마커를 클릭하면 자세한 진료소의 정보를 확인할 수 있습니다. 타 지역은 업데이트 중에 있습니다.
                   <div id="map" style="width:100%;height:400px;"></div>
-
+                  <a
+                    href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스
+                    제주지역 선별진료소(카카오맵 연동)</a>
                   <p style="margin-top:1rem">
                     <a class="btn btn-primary" data-toggle="collapse" href="#제주보건지소" role="button" aria-expanded="true" aria-controls="진료소1">제주 보건지소현황</a>
                   </p>
