헤더 디자인 수정

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
           <!-- Page Heading -->
           
           <header>
-            <div class="row">
-              <h1 style="margin-top:1em;margin-left:.5em;"class="title mb-0 mb-4">신종 코로나 바이러스 맵</h1>
-              <h6 style="margin-top:3.7em;"class="h6 mb-0 mb-4">&nbsp;&nbsp;<span class="text-update"></span> 최종 업데이트</h6>
+            <div class="row" style="margin-top:2em;margin-left:.5em;">
+              <h1 class="title">신종 코로나 바이러스 맵&nbsp;</h1>
+              <h6 style="align-self: flex-end;" class="h6"><span class="text-update"></span> 최종 업데이트</h6>
             </div class="row">
           </header>
 
