제목에 아이콘 추가

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
           
 <header class="d-flex flex-column">
   <div class="row" style="margin-top:2em;margin-left:2em;">
-    <h1 class="title">신종 코로나 바이러스 맵&nbsp;</h1>
+    <img src='img/live.svg' style="width: 22px;height: 22px;align-self: bottom;">&nbsp;
+    <h1 class="title" style="vertical-align: middle;"> 라이브 코로나 맵&nbsp;</h1>
     <h6 style="align-self: flex-end;" class="h6"><span class="text-update"></span> 최종 업데이트</h6>
   </div class="row">
 </header>
