--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <title>코로나 맵</title>
   <link rel='icon' href='img/favicon.png' type='image/x-icon'/ >
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
   <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=26ba2oaskk"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157131634-1"></script>
   <script>
