완치자 현황 오류 글귀 수정 -> 확진자 현황

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="col-xl-3 col-md-6 mb-4">
               <div class="card border-left-warning shadow h-100 py-2">
                 <div class="card-body">
-                  <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">완치자 현황</div>
+                  <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">확진자 현황</div>
                   <h4 class="small font-weight-bold">한국(확진자 <span id="한국확진자"></span>명/사망자 0명)<span
                       class="float-right">100%</span></h4>
                   <div class="progress mb-4">
@@ -1020,7 +1020,7 @@
                             </tr>
 
                           </tbody>
-                          
+
                         </table>
 
                   </div>
